@@ -1,0 +1,5 @@
+<?php
+$extpath = t3lib_extMgm::extPath('realurl');
+return array(
+   'tx_realurl' => $extpath . 'class.tx_realurl.php'
+);
